Layout Login componet

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,13 +20,15 @@
   "plugins": ["react", "prettier"],
   "rules": {
     "react/function-component-definition": [
-      1,
+      2,
       {
-        "namedComponents": "function-declaration"
+        "namedComponents": "arrow-function",
+        "unnamedComponents": "arrow-function"
       }
     ],
     "react/jsx-filename-extension": 0,
     "react/prop-types": 0,
-    "react/jsx-props-no-spreading": 0
+    "react/jsx-props-no-spreading": 0,
+    "react/no-unknown-property": 0
   }
 }
