--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,9 @@
     "react/jsx-filename-extension": 0,
     "react/prop-types": 0,
     "react/jsx-props-no-spreading": 0,
-    "react/no-unknown-property": 0
+    "react/no-unknown-property": 0,
+    "react/jsx-no-constructed-context-values": 0,
+    "no-else-return": 0,
+    "react/no-array-index-key": 0
   }
 }
