--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "challenge-books-front-end",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ronald-assis.github.io/Challenge-books-front-end/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
@@ -9,6 +10,7 @@
     "@types/react-router-dom": "^5.3.2",
     "axios": "^0.24.0",
     "eslint-plugin-import-helpers": "^1.2.0",
+    "gh-pages": "^3.2.3",
     "js-cookie": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -17,6 +19,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
